--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
-.chart-container{
-    width: 50%;
-    margin: auto;
+header{
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    padding: 100px 0;
+}
+
+.chart-container{
+    display: flex;
+    justify-content: center;
 }
 
 .chart{
-    max-width: 700px;
-    margin: 50px 0;
+    max-width: 500px;
+    margin: 50px;
 }
